--- a/MeetingPlatformUI/index.html
+++ b/MeetingPlatformUI/index.html
@@ -82,7 +82,75 @@
     </div>
 
     <aside class="right-section">
-
+        <h3>Messages</h3>
+        <p>You can chat here with other members during video call</p>
+        <div class="messages">
+            <div class="item">
+                <img src="assets/profile1.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>Reza</h5>
+                        <p>09:20</p>
+                    </div>
+                    <p>Hello, How are you doing?</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/profile2.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>John</h5>
+                        <p>09:21</p>
+                    </div>
+                    <p>Hi, Thanks.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/profile3.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>Jack</h5>
+                        <p>09:28</p>
+                    </div>
+                    <p>Can I record video call?</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/profile4.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>Anna</h5>
+                        <p>09:31</p>
+                    </div>
+                    <p>Yes, NP!</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/profile1.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>Reza</h5>
+                        <p>09:32</p>
+                    </div>
+                    <p>Please send recording to me after call.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/profile3.jpg">
+                <div class="text">
+                    <div class="info">
+                        <h5>Jack</h5>
+                        <p>09:34</p>
+                    </div>
+                    <p>Yes, I will send it in our group.</p>
+                </div>
+            </div>
+        </div>
+        <div class="send">
+            <i class="ri-emoji-sticker-fill stickerIcon"></i>
+            <input type="text" placeholder="Write a message...">
+            <i class="ri-send-plane-fill sendIcon"></i>
+        </div>
     </aside>
     
 </body>
