--- a/MeetingPlatformUI/index.html
+++ b/MeetingPlatformUI/index.html
@@ -26,12 +26,12 @@
                 <i class="ri-message-2-fill"></i>
             </div>
         </div>
-        <img src="assets/profile1.png">
+        <img src="assets/profile2.jpg">
     </aside>
 
     <div class="main">
         <div class="header">
-            <h3>Next Video Recording Meeting</h3>
+            <h3>Meeting</h3>
             <div class="info">
                 <div class="details">
                     <div class="date">
@@ -49,16 +49,16 @@
         <div class="call">
             <div class="host">
                 <img src="assets/host.jpg" >
-                <div class="tag">Alisa</div>
+                <div class="tag">Наталья</div>
             </div>
             <div class="clients">
                 <div class="item">
                     <img src="assets/client1.jpg" >
-                    <div class="tag">Ted</div>
+                    <div class="tag">Eric</div>
                 </div>
                 <div class="item">
                     <img src="assets/client2.jpg" >
-                    <div class="tag">Sara</div>
+                    <div class="tag">Σάρα</div>
                 </div>
                 <div class="item">
                     <img src="assets/client3.jpg" >
@@ -66,7 +66,7 @@
                 </div>
                 <div class="item">
                     <img src="assets/client4.jpg" >
-                    <div class="tag">You</div>
+                    <div class="tag">Prince</div>
                 </div>
             </div>
         </div>
@@ -89,28 +89,28 @@
                 <img src="assets/profile1.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>Reza</h5>
-                        <p>09:20</p>
+                        <h5>Harry</h5>
+                        <p>11:20</p>
                     </div>
-                    <p>Hello, How are you doing?</p>
+                    <p>Hello, what is the topic of today's meeting?</p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/profile2.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>John</h5>
-                        <p>09:21</p>
+                        <h5>Daniel</h5>
+                        <p>11:21</p>
                     </div>
-                    <p>Hi, Thanks.</p>
+                    <p>Hi, Today's topic is the projected position of the market in 1 year.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/profile3.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>Jack</h5>
-                        <p>09:28</p>
+                        <h5>Oscar</h5>
+                        <p>11:28</p>
                     </div>
                     <p>Can I record video call?</p>
                 </div>
@@ -119,8 +119,8 @@
                 <img src="assets/profile4.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>Anna</h5>
-                        <p>09:31</p>
+                        <h5>Анастасия</h5>
+                        <p>11:31</p>
                     </div>
                     <p>Yes, NP!</p>
                 </div>
@@ -129,20 +129,20 @@
                 <img src="assets/profile1.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>Reza</h5>
-                        <p>09:32</p>
+                        <h5>Harry</h5>
+                        <p>11:32</p>
                     </div>
-                    <p>Please send recording to me after call.</p>
+                    <p>I am ready to make a presentation.</p>
                 </div>
             </div>
             <div class="item">
-                <img src="assets/profile3.jpg">
+                <img src="assets/profile2.jpg">
                 <div class="text">
                     <div class="info">
-                        <h5>Jack</h5>
-                        <p>09:34</p>
+                        <h5>Daniel</h5>
+                        <p>11:34</p>
                     </div>
-                    <p>Yes, I will send it in our group.</p>
+                    <p>Okay, we'll start in a minute.</p>
                 </div>
             </div>
         </div>
