File names edit

--- a/MeetingPlatformUI/index.html
+++ b/MeetingPlatformUI/index.html
@@ -53,19 +53,19 @@
             </div>
             <div class="clients">
                 <div class="item">
-                    <img src="assets/client1.jpg" >
+                    <img src="assets/participant1.jpg" >
                     <div class="tag">Eric</div>
                 </div>
                 <div class="item">
-                    <img src="assets/client2.jpg" >
+                    <img src="assets/participant2.jpg" >
                     <div class="tag">Σάρα</div>
                 </div>
                 <div class="item">
-                    <img src="assets/client3.jpg" >
+                    <img src="assets/participant3.jpg" >
                     <div class="tag">Kimson</div>
                 </div>
                 <div class="item">
-                    <img src="assets/client4.jpg" >
+                    <img src="assets/participant4.jpg" >
                     <div class="tag">Prince</div>
                 </div>
             </div>
